beta version for test purpose and push it firebase function
