# routes/authCoreRoutes.js
@@ -6,6 +6,7 @@ function createAuthCoreRoutes({ authController }) {
   const router = express.Router();
 
   router.post('/login', asyncHandler(authController.login));
+  router.post('/vip-login', asyncHandler(authController.loginVip));
 
   router.get('/projects', bearerTokenMiddleware, asyncHandler(authController.getProjects));
 
